[project]
name = "praktika"
version = "0.1.0"
description = "Noyaml GitHub CI"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Max Kainov", email = "max.kainov@example.com" }
]

[project.urls]
Homepage = "https://github.com/ClickHouse/ClickHouse/tree/master/ci/praktika"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
