[package]
name = "blake3"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.*"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cc = "1.0.4"
cbindgen = "0.20.0"
